--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1{
     justify-content: space-around;
     align-items: center;
     box-sizing: border-box;
-    background-color: blue;
+    border: 1px solid black;
     height: 150px;
     width: 50%;
     margin-top: 50px;
@@ -84,6 +84,7 @@ h1{
    
 }
 
+
 .tool-list, .score-container{
     margin-top: 3vw;
     display: flex;
@@ -98,13 +99,17 @@ h1{
 }
 
 .tool-container{
-    background-color: blue;
+    border: black solid 1px;
     box-sizing: border-box;
-    width: 2vw;
-    height: 2vw;
+    width: 20%;
+    height: 100px;
     transform: scale(1);
     transition: all .07s;
     cursor: pointer;
+}
+
+.tool-container > img{
+    height: 100%;
 }
 
 .tool-container.selected{
