--- a/styles.css
+++ b/styles.css
@@ -55,11 +55,11 @@ h1{
 }
 
 .fist-container-left.play-animate{
-    animation: leftPlay .7s linear 0s 3 alternate both;
+    animation: leftPlay .7s ease-in-out 0s 3 alternate both;
 }
 
 .fist-container-right.play-animate{
-    animation: rightPlay .7s linear 0s 3 alternate both;
+    animation: rightPlay .7s ease-in-out 0s 3 alternate both;
 }
 
 .shoot-button{
@@ -114,7 +114,8 @@ h1{
 
 .tool-container.selected{
     border: 4px solid black;
-    box-shadow: 10px;
+    transform: scale(1.1);
+
 }
 
 .score-update{
